--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+  /* border: 1px solid rgb(0, 0, 0); */
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  /* background-image: url(./CEO2.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
+  background: radial-gradient(#ffffff,#fcfdff);
+  background-repeat: no-repeat;
+  color: antiquewhite;
+  height: 100vh;
+  /* background: #003e5d; */
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.inputStyles{
+  border-bottom:  1px solid black;
+}
+.signupForm button{
+  border: 1px solid black;
 }
